WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36273
CSS3 :indeterminate and input type=radio test fails
https://bugs.webkit.org/show_bug.cgi?id=36273
Summary
CSS3 :indeterminate and input type=radio test fails
Simon Fraser (smfr)
Reported
2010-03-17 20:17:38 PDT
The test here:
http://samples.msdn.microsoft.com/ietestcenter/css3/selectors/indeterminate.htm
fails.
Attachments
Testcase
(1.66 KB, text/html)
2010-03-17 20:19 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(6.56 KB, patch)
2010-03-18 11:20 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-03-17 20:19:19 PDT
Created
attachment 51001
[details]
Testcase
Simon Fraser (smfr)
Comment 2
2010-03-18 11:20:04 PDT
Created
attachment 51059
[details]
Patch
Dave Hyatt
Comment 3
2010-03-18 11:21:40 PDT
Comment on
attachment 51059
[details]
Patch r=me
Simon Fraser (smfr)
Comment 4
2010-03-18 11:23:41 PDT
http://trac.webkit.org/changeset/56174
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug