2010-03-18  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=36273
        CSS3 :indeterminate and input type=radio test fails

        The :indeterminate pseudo-class should apply to both radio buttons and checkboxes.

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setIndeterminate): Use allowsIndeterminate() to determine if the input
        supports the indeterminate state.
        (WebCore::HTMLInputElement::preDispatchEventHandler): Use allowsIndeterminate() to determine whether
        to handle the indeterminate state.
        (WebCore::HTMLInputElement::postDispatchEventHandler): Ditto.
        * html/HTMLInputElement.h:
        (WebCore::HTMLInputElement::allowsIndeterminate): New utility method, returns true for radio buttons
        and checkboxes.

Canonical link: https://commits.webkit.org/47468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56174 268f45cc-cd09-0410-ab3c-d52691b4dbfc